added ant design and initial setup

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
   "plugins": [
-    "@babel/plugin-proposal-object-rest-spread"
+    "@babel/plugin-proposal-object-rest-spread",
+    ["import", {"libraryName": "antd", "style": true}]
   ],
   "presets": [
     ["@babel/env", {
