--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "server": "nodemon src/server/server.js",
-    "start:client:server": "concurrently \"npm run server\" \"npm start\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client:server": "concurrently \"npm run server\" \"npm start\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "build:dev": "webpack --mode development"
   },
   "repository": {
     "type": "git",
@@ -21,6 +23,7 @@
     "@babel/preset-env": "^7.0.0-beta.44",
     "@babel/preset-react": "^7.0.0-beta.44",
     "babel-loader": "^8.0.0-beta.2",
+    "babel-plugin-import": "^1.7.0",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
@@ -31,6 +34,7 @@
     "webpack-dev-server": "3.1.3"
   },
   "dependencies": {
+    "antd": "^3.4.3",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
@@ -40,6 +44,11 @@
     "mongoose": "^5.0.15",
     "react": "16.3.2",
     "react-dom": "16.3.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "redux": "^4.0.0",
+    "redux-promise-middleware": "^5.1.1",
     "validator": "^9.4.1"
   }
 }
