--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@babel/preset-react": "^7.0.0-beta.44",
     "babel-loader": "^8.0.0-beta.2",
     "babel-plugin-import": "^1.7.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "concurrently": "^3.5.1",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
@@ -34,7 +36,6 @@
     "webpack-dev-server": "3.1.3"
   },
   "dependencies": {
-    "antd": "^3.4.3",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "dotenv": "^5.0.1",
@@ -42,6 +43,7 @@
     "jsonwebtoken": "^8.2.1",
     "mongodb": "^3.0.7",
     "mongoose": "^5.0.15",
+    "prop-types": "^15.6.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "^5.0.7",
@@ -49,6 +51,8 @@
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
     "redux-promise-middleware": "^5.1.1",
+    "styled-components": "^3.2.6",
+    "styled-theming": "^2.2.0",
     "validator": "^9.4.1"
   }
 }
