drop down component

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,10 @@
   "plugins": [
     "@babel/plugin-proposal-object-rest-spread",
     ["syntax-dynamic-import"],
-    ["transform-class-properties"]
+    ["transform-class-properties"],
+    ["babel-plugin-styled-components", {
+      "minify": false
+    }]
   ],
   "presets": [
     ["@babel/env", {
